# metrology

./: .env  .gitignore  .pre-commit-config.yaml  README.md  metrology_stage1_notes.md  pyproject.toml
app/: config.py  main.py
app/api/: equipment.py
app/models/: __init__.py  base.py  equipment.py  verification.py
app/schemas/: equipment.py  verification.py
metrology-desktop/: .gitignore  package-lock.json  package.json
metrology-desktop/src/: App.vue  api.ts  types.ts
metrology-desktop/src-tauri/: tauri.conf.json
migrations/: env.py
migrations/versions/: 4476f877dd0f_add_equipment_indexes.py  4b6b4dd9e10b_add_verification_table.py  bf015c392cda_init_equipment.py  ee8ed682d374_add_equipment_state.py
