[project]
name = "metrology"
version = "0.1.0"
description = "Приложение для учета метрологического обеспечения и управления оборудованием"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
    "pre-commit>=4.3.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
  "client/node_modules",
  "client/dist",
  ".venv",
  "alembic/versions",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PERF", "PL", "RUF"]
ignore = ["RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
